Model aggregation component dependencies